force-app/main/default/objects/iManage_Documents__c/iManage_Documents__c.object-meta.xml
<CustomObject>
    <label>iManage Documents</label>
    <nameField>
        <displayFormat>D-{0000000}</displayFormat>
        <label>iManage Documents#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>iManage Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>