force-app/main/default/objects/iManage_Documents__c/fields/access__c.field-meta.xml
<CustomField>
    <fullName>access__c</fullName>
    <label>access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>