force-app/main/default/objects/iManage_Documents__c/fields/author_description__c.field-meta.xml
<CustomField>
    <fullName>author_description__c</fullName>
    <label>author_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>