force-app/main/default/objects/iManage_Documents__c/fields/class_code__c.field-meta.xml
<CustomField>
    <fullName>class_code__c</fullName>
    <label>class_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>