force-app/main/default/objects/iManage_Documents__c/fields/class_description__c.field-meta.xml
<CustomField>
    <fullName>class_description__c</fullName>
    <label>class_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>