force-app/main/default/objects/iManage_Documents__c/fields/create_date__c.field-meta.xml
<CustomField>
    <fullName>create_date__c</fullName>
    <label>create_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>