force-app/main/default/objects/iManage_Documents__c/fields/create_profile_date__c.field-meta.xml
<CustomField>
    <fullName>create_profile_date__c</fullName>
    <label>create_profile_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>