force-app/main/default/objects/iManage_Documents__c/fields/database__c.field-meta.xml
<CustomField>
    <fullName>database__c</fullName>
    <label>database</label>
    <length>255</length>
    <type>Text</type>
</CustomField>