force-app/main/default/objects/iManage_Documents__c/fields/declared__c.field-meta.xml
<CustomField>
    <fullName>declared__c</fullName>
    <label>declared</label>
    <length>255</length>
    <type>Text</type>
</CustomField>