force-app/main/default/objects/iManage_Documents__c/fields/DocketingActivityId__c.field-meta.xml
<CustomField>
    <fullName>DocketingActivityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocketingActivityId</label>
    <referenceTo>SymphonyLF__Docketing_Activity__c</referenceTo>
    <relationshipLabel>iManage Documents</relationshipLabel>
    <relationshipName>iManage_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>