force-app/main/default/objects/iManage_Documents__c/fields/document_number__c.field-meta.xml
<CustomField>
    <fullName>document_number__c</fullName>
    <label>document_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>