force-app/main/default/objects/iManage_Documents__c/fields/edit_profile_date__c.field-meta.xml
<CustomField>
    <fullName>edit_profile_date__c</fullName>
    <label>edit_profile_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>