force-app/main/default/objects/iManage_Documents__c/fields/extension__c.field-meta.xml
<CustomField>
    <fullName>extension__c</fullName>
    <label>extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>