force-app/main/default/objects/iManage_Documents__c/fields/file_create_date__c.field-meta.xml
<CustomField>
    <fullName>file_create_date__c</fullName>
    <label>file_create_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>