force-app/main/default/objects/iManage_Documents__c/fields/File_Location__c.field-meta.xml
<CustomField>
    <fullName>File_Location__c</fullName>
    <formula>IF(
    ISBLANK(workspace_name__c),
    iManage_Folders__r.iManage_Workspace__r.name__c,
    workspace_name__c
) 
&amp; &quot;/&quot; &amp;
iManage_Folders__r.ParentId__r.name__c &amp; 
&quot;/&quot; &amp; 
Folder_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Location</label>
    <type>Text</type>
</CustomField>