force-app/main/default/objects/iManage_Documents__c/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <formula>iManage_Folders__r.name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folder Name</label>
    <type>Text</type>
</CustomField>