force-app/main/default/objects/iManage_Documents__c/fields/iManage_Folders__c.field-meta.xml
<CustomField>
    <fullName>iManage_Folders__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>iManage Folders</label>
    <referenceTo>iManage_Folders__c</referenceTo>
    <relationshipLabel>iManage Documents</relationshipLabel>
    <relationshipName>iManage_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>