force-app/main/default/objects/iManage_Documents__c/fields/iManageFileUrl__c.field-meta.xml
<CustomField>
    <fullName>iManageFileUrl__c</fullName>
    <formula>&apos;https://mcciplaw-mobility.imanage.work/work/web/r/libraries/ACTIVE/folders/&apos; +  iManage_Folders__r.id__c + &apos;?selectedItem=&apos; + id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iManageFileUrl</label>
    <type>Text</type>
</CustomField>