force-app/main/default/objects/iManage_Documents__c/fields/in_use__c.field-meta.xml
<CustomField>
    <fullName>in_use__c</fullName>
    <label>in_use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>