force-app/main/default/objects/iManage_Documents__c/fields/indexable__c.field-meta.xml
<CustomField>
    <fullName>indexable__c</fullName>
    <label>indexable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>