force-app/main/default/objects/iManage_Documents__c/fields/is_checked_out__c.field-meta.xml
<CustomField>
    <fullName>is_checked_out__c</fullName>
    <label>is_checked_out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>