force-app/main/default/objects/iManage_Documents__c/fields/iwl__c.field-meta.xml
<CustomField>
    <fullName>iwl__c</fullName>
    <label>iwl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>