force-app/main/default/objects/iManage_Documents__c/fields/last_user_description__c.field-meta.xml
<CustomField>
    <fullName>last_user_description__c</fullName>
    <label>last_user_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>