force-app/main/default/objects/iManage_Documents__c/fields/operator_description__c.field-meta.xml
<CustomField>
    <fullName>operator_description__c</fullName>
    <label>operator_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>