force-app/main/default/objects/iManage_Documents__c/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <formula>iManage_Folders__r.recordId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>recordId</label>
    <type>Text</type>
</CustomField>