force-app/main/default/objects/iManage_Documents__c/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <label>size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>