force-app/main/default/objects/iManage_Documents__c/fields/system_edit_date__c.field-meta.xml
<CustomField>
    <fullName>system_edit_date__c</fullName>
    <label>system_edit_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>