force-app/main/default/objects/iManage_Documents__c/fields/type_description__c.field-meta.xml
<CustomField>
    <fullName>type_description__c</fullName>
    <label>type_description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>