force-app/main/default/objects/iManage_Documents__c/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <label>version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>