force-app/main/default/objects/iManage_Documents__c/fields/workspace_id_Formula__c.field-meta.xml
<CustomField>
    <fullName>workspace_id_Formula__c</fullName>
    <formula>IF(
ISBLANK(workspace_id__c),
iManage_Folders__r.iManage_Workspace__r.id__c,
workspace_name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>workspace_id_Formula</label>
    <type>Text</type>
</CustomField>