force-app/main/default/objects/iManage_Documents__c/fields/workspace_name__c.field-meta.xml
<CustomField>
    <fullName>workspace_name__c</fullName>
    <label>workspace_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>