force-app/main/default/objects/iManage_Documents__c/fields/workspace_name_formula__c.field-meta.xml
<CustomField>
    <fullName>workspace_name_formula__c</fullName>
    <formula>IF(
ISBLANK(workspace_name__c),
iManage_Folders__r.iManage_Workspace__r.name__c,
workspace_name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>workspace_name_formula</label>
    <type>Text</type>
</CustomField>