force-app/main/default/objects/iManage_Documents__c/fields/wstype__c.field-meta.xml
<CustomField>
    <fullName>wstype__c</fullName>
    <label>wstype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>