force-app/main/default/objects/iManage_Documents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>iManage_Folders__c</columns>
    <columns>id__c</columns>
    <columns>name__c</columns>
    <columns>is_checked_out__c</columns>
    <columns>extension__c</columns>
    <columns>ContentVersionId__c</columns>
    <columns>type__c</columns>
    <columns>workspace_id__c</columns>
    <columns>content_type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>recordId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>